--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <head>
 <title>Test.com index page</title>
 </head>
-<h1>Hello, welcome to test.com! It works!</h1>            
+<h1>Hello world, welcome to ezel.com! It works!</h1>            
 <h2>That is all I have to say. If you don't see this then it doesn't work.</h2>
 </body>
 </html>
