--- a/index.html
+++ b/index.html
@@ -2,6 +2,6 @@
 <title>Test.com index page</title>
 </head>
 <h1>Hello world, welcome to https://bryanme5.github.io/ezel! It works!</h1>            
-<h2>That is all I have to say. If you don't see this then it doesn't work.</h2>
+<h2>Testing GitHub pages</h2>
 </body>
 </html>
