--- a/index.html
+++ b/index.html
@@ -1,7 +1,12 @@
+<!-- <head> -->
+<!-- <title>Test.com index page</title> -->
+<!-- </head> -->
+<!-- <h1>Hello world, welcome to https://bryanme5.github.io/ezel! It works!</h1>             -->
+<!-- <h2>Testing GitHub pages</h2> -->
+<!-- </body> -->
+<!-- </html> -->
 <head>
-<title>Test.com index page</title>
+    <title>Javi jodido racista</title>
 </head>
-<h1>Hello world, welcome to https://bryanme5.github.io/ezel! It works!</h1>            
-<h2>Testing GitHub pages</h2>
 </body>
 </html>
