--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
 <!-- </body> -->
 <!-- </html> -->
 <head>
-    <title>Javi jodido racista</title>
+    <title>Test Apache2</title>
 </head>
+<h1>Que el mundo sepa que Javi es un racista</h1>
 </body>
 </html>
