--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <head>
 <title>Test.com index page</title>
 </head>
-<h1>Hello world, welcome to https://bryanme5.github.io/ezel! It works!</h1>            
-<h2>Testing GitHub pages</h2>
+<h1>Hello world, welcome to https://bryanme5.github.io/ezel! It works!</h1>           
+<h2>Zhijie no estudies, lee light novels</h2>
 </body>
 </html>
