--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 <head>
     <title>Test Apache2</title>
 </head>
-<h1>Que el mundo sepa que Javi es racista</h1>
+<h1>TODO: Create a good website with Bootstrap and React (or maybe see TypeScript)</h1>
 </body>
 </html>
