--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <!-- </body> -->
 <!-- </html> -->
 <head>
-    <title>Test Apache2</title>
+    <title>:3</title>
 </head>
 <h1>Naya, perdón</h1>
 </body>
