--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
 <!-- </body> -->
 <!-- </html> -->
 <head>
-    <title>:3</title>
+    <title>Testing title</title>
 </head>
-<h1>Naya, perdón</h1>
+<body>
+    <h1>Testing body</h1>
 </body>
 </html>
